--- a/css/style.css
+++ b/css/style.css
@@ -7,10 +7,11 @@
     font-family: 'hanimation';
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    /* box-sizing: border-box; */
     scroll-behavior:smooth;
+    box-sizing: content-box;
+      }
 
-}
 
 ::selection {
     color: rgb(243, 243, 242);
@@ -52,7 +53,7 @@ header span{
 
  .m2{
     width: 100%;
-    height: 400px;
+    height: 700px;
     background-color:#c5bfab;
     
     
@@ -61,11 +62,31 @@ header span{
 .m1>img{
     margin-top:80px ;
     border-radius: 50%;
+    filter: blur(3px);
     border: 6px white solid;
 }
 .m1>img:hover{
     box-shadow: inset #000000aa 0 0 50px 0;
+    filter: blur(0px);
 }
+
+.skills {
+ margin-top: 50px;
+ width: 100%;
+ height: 30px;
+
+}
+
+.skills a{
+    text-decoration: none;
+    margin-top: 50px; 
+    color: #292929;
+    letter-spacing: 4px;  
+   }
+.skills a:hover{
+    text-decoration: none;
+}
+
 #projects-nav{
     background-color: #1D3557;
     display: flex;
@@ -73,6 +94,7 @@ header span{
     position: sticky;
     top: 40px;
     z-index: 999;
+
 }
 nav a{
     color:white;
@@ -85,6 +107,7 @@ nav a{
 nav a{
     transform: translateX(-0.75em);
     transition: transform 200ms;
+   
 
 }
 nav a::after{
@@ -94,34 +117,37 @@ width: 0.75em;
 color: #f8f8f8;
 opacity: 0;
 transition: opacity 200ms;
+
 }
 nav a:hover::after{
  opacity: 1;
 }
 nav a:hover{
  color: #E63946; 
+ text-decoration: none;
 }
 .button{
     margin-top: 10px;
 }
 #buttom{
     background-color: #4CaF50; /* Green */
+    margin-top: 300PX;
     border-radius: 20px;
     color: white;
-    padding: 1px 12px;
+    padding: 2px 12px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
     position: relative;
-    overflow: hidden;
     transition: 0.5s;
 }
 
 #buttom:hover{
-    background-color:#c5bfab;
+    background-color:#E63946 ;
+    /* background-color:#c5bfab;
     border:3px solid #030303;
-    color: #000000;
+    color: #000000; */
    
 
 }
@@ -218,102 +244,20 @@ nav a:hover{
 }
 
 /*MODALS */
-#nav-desgin{
-background-color:f1faee;
+
+  #nav-desgin{
+    background-color: #030303;
+    text-align: center;
     display: flex;
     justify-content: center;
     position: sticky;
     top: 40px;
     z-index: 999;
-    
-}
-.desgin{
-    background-color:rgb(255, 255, 255);
-}
 
-.cards {
-    display: flex;
-    max-width: 800px;
-    width: calc(100% - 100px);
-    height: 400px;
   }
-  
-  .cards .card .info .title {
-    font-weight: bold;
-    font-size: 1.2rem;
-  }
-  
-  .cards .card .label .icon {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-width: 40px;
-    height: 40px;
-    background-color: white;
-    color: var(--color);
-    border-radius: 50%;
-  }
-  
-  .cards .card .label .info {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin-left: 10px;
-    white-space: pre;
-    transition: 1s var(--cb);
-  }
-  
-  .cards .card {
-    position: relative;
-    min-width: 60px;
-    background: var(--bg);
-    overflow: hidden;
-    margin: 5px;
-    background-size: auto 150%;
-    background-position: center;
-    cursor: pointer;
-    transition: 0.5s var(--cb);
-    border-radius: 30px;
-  }
-  
-  .cards .card .label {
-    display: flex;
-    position: absolute;
-    right: 0;
-    height: 40px;
-    transition: 0.5s var(--cb);
-  }
-  
-  .cards .card.active .label {
-    bottom: 20px;
-    left: 20px;
-  }
-  
-  .cards .card.active {
-    flex-grow: 10000;
-    background-size: auto 100%;
-  }
-  
-  .cards .card:not(.active) .label {
-    bottom: 10px;
-    left: 10px;
-  }
-  
-  .cards .card .shadow {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    height: 100px;
-    background: linear-gradient(
-      0, #0004, transparent
-    );
-  }
-  
-  .cards .card.active .info {
-    opacity: 1;
-  }
-  
-  .cards .card:not(.active) .info {
-    opacity: 0;
-  }
+
+  .desgin{
+    background-color: #000;
+    align-content:center ;
+
+}
