--- a/css/style.css
+++ b/css/style.css
@@ -139,6 +139,7 @@ nav a:hover{
     display: inline-block;
     font-size: 16px;
     position: relative;
+    top: -57px;
     transition: 0.5s;
 }
 
