--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,9 @@
     font-family: 'hanimation';
     margin: 0;
     padding: 0;
-    /* box-sizing: border-box; */
+    box-sizing: border-box;
     scroll-behavior:smooth;
-    box-sizing: content-box;
+    /* box-sizing: content-box; */
       }
 
 
