--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,9 @@
     background-color: rgba(99, 5, 5, 0.555);
   }
   
+  /* .carousel-inner {
+    height: 100%;
+  } */
 
 
 header{
@@ -51,12 +54,17 @@ header span{
 
  .m2{
     width: 100%;
-    height: 700px;
+    height: 742px;
     background-color:#c5bfab;
     
     
 
 }
+
+.skill{
+  margin-top: 40px;
+}
+
 .m1>img{
     margin-top:80px ;
     border-radius: 50%;
@@ -75,13 +83,13 @@ header span{
 
 }
 
-.skills a{
+ a{
     text-decoration: none;
     margin-top: 50px; 
     color: #292929;
     letter-spacing: 4px;  
    }
-.skills a:hover{
+ a:hover{
     text-decoration: none;
 }
 
@@ -138,8 +146,8 @@ nav a:hover{
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
-    position: relative;
-    top: -57px;
+    /* position: relative;
+    top: -57px; */
     transition: 0.5s;
 }
 
@@ -268,6 +276,23 @@ nav a:hover{
   
   .footer-clean .item.social {
     text-align:right;
+  }
+  
+
+  .carousel-indicators button.thumbnail {
+    width: 100px;
+  }
+  .carousel-indicators button.thumbnail:not(.active) {
+    opacity: 0.7;
+  }
+  .carousel-indicators {
+    position: static;
+  }
+  @media screen and (min-width: 992px) {
+    .carousel {
+      max-width: 70%;
+      margin: 0 auto;
+    }
   }
   
   @media (max-width:767px) {
