--- a/css/style.css
+++ b/css/style.css
@@ -85,7 +85,6 @@ header span{
 
  a{
     text-decoration: none;
-    margin-top: 50px; 
     color: #292929;
     letter-spacing: 4px;  
    }
@@ -225,18 +224,18 @@ nav a:hover{
     border-radius: 10px;
 }
 
-/*MODALS */
-
+/* MODALS */
+/* 
   #nav-desgin{
-    background-color: #030303;
+     background-color: #030303;
     text-align: center;
     display: flex;
     justify-content: center;
     position: sticky;
     top: 40px;
-    z-index: 999;
+    z-index: 999; 
 
-  }
+  }  */
 
   .desgin{
     background-color: #000;
